istio-teaching/destinationrules/dr-productpage-exportto-dot.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: productpage
spec:
  exportTo:
  - '.'
  host: productpage.istio.svc.cluster.local
  subsets:
  - name: v1
    labels:
      version: v1
