istio-teaching/destinationrules/dr-productpage-exportto-namespace.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: productpage
spec:
  exportTo:
  - 'istio-system'
  host: productpage
  subsets:
  - name: v1
    labels:
      version: v1
