istio-teaching/destinationrules/dr-productpage-exportto-star.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: productpage
spec:
  exportTo:
  - '*'
  host: productpage
  subsets:
  - name: v1
    labels:
      version: v1
